fix overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -21,6 +21,9 @@
   font-style: normal;
 }
 
+html {
+  overflow: hidden;
+}
 body {
   display: flex;
   flex-direction: column;
